--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,6 +2,7 @@ fixtures:
   repositories:
     aviator: git://github.com/aimonb/puppet_aviator.git
     mysql: git://github.com/puppetlabs/puppetlabs-mysql.git
+    postgresql: git://github.com/puppetlabs/puppetlabs-postgresql.git
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
     rabbitmq:
       repo: 'git://github.com/puppetlabs/puppetlabs-rabbitmq'
