--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,9 @@
 fixtures:
   repositories:
     apache: git://github.com/puppetlabs/puppetlabs-apache.git
-    concat: git://github.com/puppetlabs/puppetlabs-concat.git
+    concat:
+      repo: 'git://github.com/puppetlabs/puppetlabs-concat.git'
+      ref: '1.2.1'
     mysql: git://github.com/puppetlabs/puppetlabs-mysql.git
     postgresql: git://github.com/puppetlabs/puppetlabs-postgresql.git
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
