--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -7,8 +7,6 @@ fixtures:
     mysql: git://github.com/puppetlabs/puppetlabs-mysql.git
     postgresql: git://github.com/puppetlabs/puppetlabs-postgresql.git
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
-    rabbitmq:
-      repo: 'git://github.com/puppetlabs/puppetlabs-rabbitmq'
-      ref: 'origin/4.x'
+    rabbitmq: 'git://github.com/puppetlabs/puppetlabs-rabbitmq'
   symlinks:
     'openstacklib': "#{source_dir}"
