--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = puppet-openstacklib
 summary = Puppet module for OpenStack Openstacklib
 description-file =
     README.md
-author = Puppet Labs and OpenStack Contributors
+author = OpenStack
 author-email = openstack-dev@lists.openstack.org
 home-page = http://docs.openstack.org/developer/puppet-openstack-guide
 classifier =
