--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -5,3 +5,4 @@
       - puppet-openstack-integration-jobs-all
       - puppet-openstack-beaker-jobs
       - release-notes-jobs-python3
+      - tripleo-puppet-standalone
