Add centos-9 jobs for wallaby zuul layout
Adds puppet-openstacklib-tripleo-centos-9-standalone definition
and into the check zuul layout. This is added as non voting
as puppet openstack will not support c9 on wallaby.
See the topic branch [1] for related reviews and [2] for context.

[1] https://review.opendev.org/q/topic:c9_wallaby_gates
[2] http://lists.openstack.org/pipermail/openstack-discuss/2022-February/027403.html
Depends-On: https://review.opendev.org/c/openstack/puppet-openstack-integration/+/831206

Change-Id: Ifeb33cde50d218566d9b2c6f8de456407762cd2b

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -8,6 +8,7 @@
     check:
       jobs:
         - puppet-openstacklib-tripleo-standalone
+        - puppet-openstacklib-tripleo-centos-9-standalone
     gate:
       jobs:
         - puppet-openstacklib-tripleo-standalone
@@ -17,10 +18,18 @@
     parent: tripleo-puppet-ci-centos-8-standalone
     description: |
       TripleO standalone Job running basic tests
-    vars:
+    vars: &standalone_vars
       build_container_images: true
       featureset_override:
         run_tempest: false
         tempest_test_whitelist:
           - 'tempest.scenario.test_server_basic_ops'
         use_os_tempest: true
+
+- job:
+    name: puppet-openstacklib-tripleo-centos-9-standalone
+    parent: tripleo-puppet-ci-centos-9-standalone
+    voting: false
+    description: |
+      TripleO standalone Job running basic tests
+    vars: *standalone_vars
