Remove centos8 wallaby tripleo jobs
TripleO has decided to drop all centos8 wallaby jobs. This removes
the c8s tripleo jobs from Puppet OpenStack repos. Note that CentOS
Stream 9 is not officially supported by stable/wallaby release of
our modules so the job is kept non-voting.

Change-Id: Ifa9dde9d3d523087b2fd9b8e62152090a4885b94

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -8,28 +8,17 @@
     check:
       jobs:
         - puppet-openstacklib-tripleo-standalone
-        - puppet-openstacklib-tripleo-centos-9-standalone
-    gate:
-      jobs:
-        - puppet-openstacklib-tripleo-standalone
 
 - job:
     name: puppet-openstacklib-tripleo-standalone
-    parent: tripleo-puppet-ci-centos-8-standalone
+    parent: tripleo-puppet-ci-centos-9-standalone
     description: |
       TripleO standalone Job running basic tests
-    vars: &standalone_vars
+    voting: false
+    vars:
       build_container_images: true
       featureset_override:
         run_tempest: false
         tempest_test_whitelist:
           - 'tempest.scenario.test_server_basic_ops'
         use_os_tempest: true
-
-- job:
-    name: puppet-openstacklib-tripleo-centos-9-standalone
-    parent: tripleo-puppet-ci-centos-9-standalone
-    voting: false
-    description: |
-      TripleO standalone Job running basic tests
-    vars: *standalone_vars
